Refactor implementation of scope call to allow for multiple calls during lifetime of function invocation.

https://bugzilla.gnome.org/show_bug.cgi?id=616343